--- a/Views/Home/Books.cshtml
+++ b/Views/Home/Books.cshtml
@@ -14,6 +14,11 @@
      <li>
          <strong>@book.Title</strong> by @book.Author<br />
           Total copies: @book.Stock
+          <form asp-action="DeleteBook" asp-route-id="@book.Id" method="post"> 
+          <button type="submit">Delete
+
+          </button>
+          </form>
            </li>
 }
 </ul>
