--- a/Views/Home/Books.cshtml
+++ b/Views/Home/Books.cshtml
@@ -1,9 +1,11 @@
+
+
 @{
     ViewData["Title"] = "Books";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Your books will be displayed here</p>
+<p>Books in Stock</p>
 
 
 @model List<Book>
@@ -14,11 +16,15 @@
      <li>
          <strong>@book.Title</strong> by @book.Author<br />
           Total copies: @book.Stock
+          Available copies: @book.Available
+          <br>
           <form asp-action="DeleteBook" asp-route-id="@book.Id" method="post"> 
-          <button type="submit">Delete
-
-          </button>
+          <button type="submit">Delete</button>
+          <a asp-action="EditBook" asp-route-id="@book.Id">Edit</a>
           </form>
            </li>
 }
 </ul>
+
+
+
