--- a/Views/Home/Books.cshtml
+++ b/Views/Home/Books.cshtml
@@ -11,9 +11,26 @@
 @model List<Book>
 
 <ul>
+<table border="2">
+    <tr>
+    <th>Title</th>
+    <th>Author</th>
+    <th>Stock</th>
+    <th>Available</th>
+    <td></td>
+    </tr>
 @foreach (var book in Model)
-{
-     <li>
+{   
+<tr>
+    <td>@book.Author</td>
+    <td>@book.Title</td>
+    <td>@book.Stock</td>
+    <td>@book.Available</td>
+    <td> <form asp-action="DeleteBook" asp-route-id="@book.Id" method="post"> 
+          <button type="submit">Delete</button>
+          <a asp-action="EditBook" asp-route-id="@book.Id">Edit</a>
+          </form></td>
+     @* <li>
          <strong>@book.Title</strong> by @book.Author<br />
           Total copies: @book.Stock
           Available copies: @book.Available
@@ -22,8 +39,9 @@
           <button type="submit">Delete</button>
           <a asp-action="EditBook" asp-route-id="@book.Id">Edit</a>
           </form>
-           </li>
-}
+           </li> *@
+</tr>}
+</table>
 </ul>
 
 
