--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddNewBook">Add New Book</a>
                         </li>
+                            <li class="nav-item"></li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Members">Members</a>
+                        </li>
                     </ul>
                 </div>
             </div>
