--- a/Views/Home/Books.cshtml
+++ b/Views/Home/Books.cshtml
@@ -11,7 +11,7 @@
 @model List<Book>
 
 <ul>
-<table border="2">
+<table border="2" cellpadding="10">
     <tr>
     <th>Title</th>
     <th>Author</th>
