--- a/Views/Home/Members.cshtml
+++ b/Views/Home/Members.cshtml
@@ -1,33 +1,34 @@
-
+@model List<Member>
 
 @{
     ViewData["Title"] = "Members";
 }
+
 <h1>@ViewData["Title"]</h1>
 
-<p>Members</p>
-
-
-@model List<Member>
-
-<ul>
-<table border="2">
-    <tr>
-    <th>Name</th>
-    </tr>
-@foreach (var member in Model)
-{   
-<tr>
-    
-    <td>@member.Name</td>
-    @* <td> <form asp-action="DeleteBook" asp-route-id="@member.Id" method="post"> 
-          <button type="submit">Delete</button>
-          <td>
-          <a asp-action="EditBook" asp-route-id="@member.Id">Edit</a>
-          </form></td> *@
-</tr>}
+<table border="2" cellpadding="10">
+    <thead>
+        <tr>
+            <th>Member Name</th>
+            <th>Book Title</th>
+            <th>Author</th>
+            <th>Date Borrowed</th>
+            <th>Return Due</th>
+        </tr>
+    </thead>
+    <tbody>
+    @foreach (var member in Model)
+    {
+        foreach (var memberBook in member.MemberBooks)
+        {
+            <tr>
+                <td>@member.Name</td>
+                <td>@memberBook.Book.Title</td>
+                <td>@memberBook.Book.Author</td>
+                <td>@memberBook.BorrowedDate.ToString("dd MMM yyyy")</td>
+                <td>@memberBook.BorrowedDate.AddDays(30).ToString("dd MMM yyyy")</td>
+            </tr>
+        }
+    }
+    </tbody>
 </table>
-</ul>
-
-
-
